# ft-repo

./: CMakeLists.txt  README.md
examples/cpp/: CMakeLists.txt
examples/cpp/baichuan2/: CMakeLists.txt  baichuan2_config.ini  baichuan2_example.cc  baichuan2_triton_example.cc  check_with_huggingface.py  huggingface_baichuan2_convert.py  start_ids.csv
src/: CMakeLists.txt
src/fastertransformer/kernels/: decoder_masked_multihead_attention_utils.h  gpt_kernels.cu  gpt_kernels.h
src/fastertransformer/layers/attention_layers/: GptContextAttentionLayer.cc
src/fastertransformer/models/: CMakeLists.txt
src/fastertransformer/models/baichuan2/: Baichuan2.cc  Baichuan2.h  Baichuan2ContextDecoder.cc  Baichuan2ContextDecoder.h  Baichuan2Decoder.cc  Baichuan2Decoder.h  Baichuan2DecoderLayerWeight.cc  Baichuan2DecoderLayerWeight.h  Baichuan2Weight.cc  Baichuan2Weight.h  CMakeLists.txt
src/fastertransformer/models/llama/: Llama.cc
src/fastertransformer/models/llama16k/: CMakeLists.txt  Llama16k.h
src/fastertransformer/triton_backend/: CMakeLists.txt  transformer_triton_backend.hpp
src/fastertransformer/triton_backend/baichuan2/: Baichuan2TritonModel.cc  Baichuan2TritonModel.h  Baichuan2TritonModelInstance.cc  Baichuan2TritonModelInstance.h  CMakeLists.txt
src/fastertransformer/triton_backend/llama/: LlamaTritonModelInstance.cc  LlamaTritonModelInstance.h
